--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
   </head>
   <body>
     <!-- Your code here -->
+    <img src="/home/maurine/Downloads/pexels-marianna-ole-757889.jpg" alt="purple flower" title="Purple n green"/>
+    <img src="/home/maurine/Downloads/pexels-irina-iriser-673857.jpg" alt="flower" title="blue spring"/>
+    <img src="/home/maurine/Downloads/pexels-craig-adderley-1563355.jpg" alt="Red flower" title="red roses"/>
   </body>
 </html>
