--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <!-- Your code here -->
     <img src="/home/maurine/Downloads/pexels-marianna-ole-757889.jpg" alt="purple flower" title="Purple n green"/>
-    <img src="/home/maurine/Downloads/pexels-irina-iriser-673857.jpg" alt="flower" title="blue spring"/>
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Wild animal" title="Lion"/>
     <img src="/home/maurine/Downloads/pexels-craig-adderley-1563355.jpg" alt="Red flower" title="red roses"/>
   </body>
 </html>
